# search_engine

./: .gitignore  README.md  docker-compose.yml  gpu_requirements.txt  prep_gpu_instance.sh  pyproject.toml  roadmap.md
frontend/: Dockerfile  main.py
model/: two_towers.py  two_towers_modular.py
sandbox/: askar.py  mess_around.py
server/: Dockerfile  main.py  processor.py  requirements.txt
training/: create_two_towers.py  create_w2v_weights.py  evaluate_two_towers.py  grid_search.py  performance_eval.py  train_two_towers.py  tt_dataloader.py
utils/: build_internet.py  cache_encodings.py  index_encodings.py  prep_two_tower_dataset.py  prep_two_tower_dataset_strings.py  rich_utils.py  tokeniser.py
