[tool.poetry]
name = "search-engine"
version = "0.1.0"
description = ""
authors = ["Askar Sulaimanov <ask.sulaimanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.0"
tqdm = "^4.66.5"
wandb = "^0.18.5"
datasets = "^3.0.1"
more-itertools = "^10.5.0"
fastapi = {extras = ["standard"], version = "^0.115.3"}
streamlit = "^1.39.0"
faiss-cpu = "^1.9.0"
gensim = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
